Removes http in order to use https when needed

--- a/app/views/hotsite/index.html.erb
+++ b/app/views/hotsite/index.html.erb
@@ -187,7 +187,7 @@ uma requisição vai chegar em uma aplicação web, passando pelo servidor web e
 
   <div class=autor>
     <h2>Willian Molinari (e/ou PotHix)</h2>
-    <img src="http://www.gravatar.com/avatar/2f09c56a60d46c8ad42fc646af73a6bb?s=90" alt="Foto de Willian Molinari, também conhecido como PotHix">
+    <img src="//www.gravatar.com/avatar/2f09c56a60d46c8ad42fc646af73a6bb?s=90" alt="Foto de Willian Molinari, também conhecido como PotHix">
     <p>Começou a trabalhar profissionalmento com desenvolvimento de software em 2006 e desde então tem trabalhado com diversas linguagens de programação.
       É entusiasta de tecnologias Open Source e sempre que possível contribui para algum projeto. No tempo livre, entre outras coisas, faz jogos com Javascript
     e HTML5. É palestrante, tendo palestrado em mais de 6 estados do Brasil, em conferências nacionais e internacionais.</p>
