Updating from arquiteturajava

--- a/app/assets/stylesheets/less/992.less
+++ b/app/assets/stylesheets/less/992.less
@@ -33,7 +33,7 @@
 	}
 
 	header:after {
-		background: #666666;
+		background: #495163;
 		bottom: 0;
 		content: ' ';
 		right: 0;
@@ -55,11 +55,13 @@
 		// fallback
 		.autor {
 			font-size: 0.9em;
+			width: 32.5%;
 		}
 
 		// seletores css3?
 		.autor:nth-child(n) {
 			margin-right: 1.45%;
+			width: 32%;
 		}
 		.autor:nth-child(3n + 1) {
 			margin-right: 0;
