--- a/app/assets/stylesheets/less/layout.less
+++ b/app/assets/stylesheets/less/layout.less
@@ -127,11 +127,11 @@ header {
 	}
 
 	#logos {
-		background: #666666;
+		background: #495163;
 		text-align: center;
 
 		a {
-			background: url(../img/logos.png) no-repeat;
+			background: url(/assets/logos.png) no-repeat;
 			display: inline-block;
 			height: 70px;
 			overflow: hidden;
@@ -204,7 +204,7 @@ iframe.twitter-share-button {
 }
 
 #curso {
-	background: #666666;
+	background: #495163;
 	margin: 1.5em 0 0 0;
 	width: 100%;
 
@@ -269,7 +269,7 @@ iframe.twitter-share-button {
 }
 
 #outroscursos {
-	background: #666666;
+	background: #495163;
 	padding: 10px 0;
 	text-align: center;
 
@@ -388,7 +388,7 @@ section {
 	}
 
 	ol a {
-		color: #666666;
+		color: #495163;
 
 		&:visited { color: #805070}
 		&:hover { color: #285bFF; }
@@ -400,7 +400,7 @@ section {
 }
 
 #tectura {
-	background: #666666;
+	background: #495163;
 	margin-top: 0;
 	margin-bottom: 30px;
 
@@ -448,6 +448,7 @@ section {
 			position: absolute;
 			left: 110px;
 			top: 12px;
+			width: 10px;
 		}
 
 		p {
@@ -464,7 +465,7 @@ section {
 		text-align: center;
 
 		a {
-			color: #666666;
+			color: #495163;
 			word-wrap: break-word;
 
 			&:hover {
@@ -499,7 +500,7 @@ section {
 }
 
 footer {
-	background: #666666;
+	background: #495163;
 	clear: both;
 	margin: 0;
 	padding: 1em 0;
