--- a/app/assets/stylesheets/less/480.less
+++ b/app/assets/stylesheets/less/480.less
@@ -81,7 +81,6 @@ section, #conteudo {
 
 #tectura {
 	p {
-		background: url(../img/tectura.png) right center no-repeat;
 		background-size: 50%;
 		font-size: 1.5em;
 		margin: 0 auto;
@@ -100,6 +99,7 @@ section, #conteudo {
 		display: -moz-inline-stack;
 		display: inline-block;
 		vertical-align: top;
+		width: 49%;
 	}
 
 	#falecom {
