Improve the whole layout for the book.
It now works on mobile and desktop.

--- a/app/views/hotsite/index.html.erb
+++ b/app/views/hotsite/index.html.erb
@@ -21,11 +21,13 @@
     <%= image_tag "capa-livro.png", alt: "Capa do livro" %>
 
     <div id=logos>
+      <a href="#"></a>
+      <a href="#"></a>
+      <a href="#"></a>
     </div>
 
     <div class=compreja>
-      <a class="nicebutton" href="#">Comprar o livro na Casa do Código</a>
-      <span>ou baixe alguns tópicos abertos abaixo</span>
+      <a class="nicebutton" href="#">Comprar o livro</a>
     </div>
   </div>
 </header>
@@ -167,19 +169,18 @@ uma requisição vai chegar em uma aplicação web, passando pelo servidor web e
   </ol>
 
   <div class=compreja>
-    <a class="nicebutton" href="#">Comprar o livro na Casa do Código</a>
+    <a class="nicebutton" href="#">Comprar o livro</a>
   </div>
 </section>
-
 <div id=tectura>
-  <p><a href="http://www.tectura.com.br">Continue a discussão no fórum do Tectura junto com os autores!</a></p>
+  <p><a href="http://forum.casadocodigo.com.br">Continue a discussão sobre o livro no fórum da casa do código</a></p>
 </div>
 
 <section id=autores>
   <h1>Sobre o Autor</h1>
 
   <div class=autor>
-    <h2>Willian Molinari (e/ou PotHix)</h2>
+    <h2>Willian Molinari<br><strong>PotHix</strong></h2>
     <img src="//www.gravatar.com/avatar/2f09c56a60d46c8ad42fc646af73a6bb?s=90" alt="Foto de Willian Molinari, também conhecido como PotHix">
     <p>Começou a trabalhar profissionalmento com desenvolvimento de software em 2006 e desde então tem trabalhado com diversas linguagens de programação.
       É entusiasta de tecnologias Open Source e sempre que possível contribui para algum projeto. No tempo livre, entre outras coisas, faz jogos com Javascript
@@ -201,19 +202,22 @@ uma requisição vai chegar em uma aplicação web, passando pelo servidor web e
 
     <ul>
       <li><a href="http://www.casadocodigo.com.br/#">Comprar o livro</a></li>
-      <li class=maior><a href="http://pothix.com1">Site do autor</a></li>
+      <li><a href="http://pothix.com">Site do autor</a></li>
 
 
       <li><a href="mailto:pothix@pothix.com">Fale com o autor</a></li>
 
       <li><a href="#conteudo">Conteúdo</a></li>
       <li><a href="#publico">Para quem é o livro</a></li>
-      <li class=maior><a href="#autores">Sobre o autor</a></li>
+      <li><a href="#autores">Sobre o autor</a></li>
 
       <li><a id="versao" href="#">Forçar Site Desktop</a></li>
     </ul>
 
     <div id=logos>
+      <a href="#"></a>
+      <a href="#"></a>
+      <a href="#"></a>
     </div>
 
     <%= image_tag "capa-livro.png", alt: "Capa do livro" %>
