--- a/app/assets/stylesheets/less/480.less
+++ b/app/assets/stylesheets/less/480.less
@@ -81,6 +81,7 @@ section, #conteudo {
 
 #tectura {
 	p {
+                background: image-url('casa-do-codigo.png') right center no-repeat;
 		background-size: 50%;
 		font-size: 1.5em;
 		margin: 0 auto;
