--- a/app/assets/stylesheets/less/layout.less
+++ b/app/assets/stylesheets/less/layout.less
@@ -131,7 +131,7 @@ header {
 		text-align: center;
 
 		a {
-			background: url(/assets/logos.png) no-repeat;
+			background: url(/assets/images/logos.png) no-repeat;
 			display: inline-block;
 			height: 70px;
 			overflow: hidden;
@@ -331,7 +331,7 @@ iframe.twitter-share-button {
 		background: url(http://www.caelum.com.br/imagens/cursos/icones/50/FJ-16.png) no-repeat left top;
 	}
 	.fj95 {
-		background: url(../img/FJ-95.png) no-repeat left top;
+		background: url(/assets/images/FJ-95.png) no-repeat left top;
 	}
 }
 
@@ -405,7 +405,7 @@ section {
 	margin-bottom: 30px;
 
 	p {
-		background: url(../img/tectura.png) right bottom no-repeat;
+		background: url(/assets/images/casa-do-codigo.png) right bottom no-repeat;
 		background-size: 100%;
 		font-size: 1.3em;
 		font-weight: normal;
@@ -448,7 +448,7 @@ section {
 			position: absolute;
 			left: 110px;
 			top: 12px;
-			width: 10px;
+			width: 100%;
 		}
 
 		p {
@@ -600,7 +600,7 @@ footer {
 		width: 100%;
 
 		a {
-			background: url(../img/logos.png) no-repeat;
+			background: url(/assets/images/logos.png) no-repeat;
 			display: inline-block;
 			height: 70px;
 			overflow: hidden;
