Change the button color

--- a/app/assets/stylesheets/less/layout.less
+++ b/app/assets/stylesheets/less/layout.less
@@ -59,7 +59,7 @@ header {
 		line-height: 66px * 0.7 / 2;
 
 		a {
-			color: #f90;
+			color: #858B98;
 		}
 	}
 
@@ -167,7 +167,7 @@ header {
 	}
 
 	.nicebutton {
-		background: #ff7f00;
+		background: #495163;
 		color: white;
 		font-size: 1.5em;
 		font-weight: normal;
@@ -400,7 +400,7 @@ section {
 }
 
 #tectura {
-	background: #495163;
+	background: #858B98;
 	margin-top: 0;
 	margin-bottom: 30px;
 
