Improve text and links

--- a/app/views/hotsite/index.html.erb
+++ b/app/views/hotsite/index.html.erb
@@ -191,11 +191,11 @@
     </hgroup>
 
     <ul>
-      <li><a href="http://www.casadocodigo.com.br/#">Comprar o livro</a></li>
+      <li><a href="http://www.casadocodigo.com.br/">Comprar o livro</a></li>
       <li><a href="http://pothix.com">Site do autor</a></li>
 
       <li><a href="#conteudo">Conteúdo</a></li>
-      <li><a href="#publico">Para quem é o livro</a></li>
+      <li><a href="#publico">Para quem é</a></li>
       <li><a href="#autores">Sobre o autor</a></li>
     </ul>
 
