Use https for google fonts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <!--[if lt IE 8]><script>location.href = 'ie.html';</script><![endif]-->
 
   <!-- Fonte bacana do Google WebFonts -->
-  <link href='http://fonts.googleapis.com/css?family=Tienne' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Tienne' rel='stylesheet' type='text/css'>
 
   <!-- Google+ -->
   <meta itemprop="name" content="Desconstruindo a web - Conheça a fundo como funciona uma requisição web">
