--- a/app/assets/stylesheets/less/base.less
+++ b/app/assets/stylesheets/less/base.less
@@ -7,7 +7,7 @@
 
 // estrutura basica
 html {
-	background: url(/assets/bg.gif) repeat;
+	background: image-url('bg.gif') repeat;
 	margin: 0;
 	padding: 0;
 }
