--- a/app/assets/stylesheets/less/layout.less
+++ b/app/assets/stylesheets/less/layout.less
@@ -131,7 +131,7 @@ header {
 		text-align: center;
 
 		a {
-			background: url(/assets/images/logos.png) no-repeat;
+			background: image-url('logos.png') no-repeat;
 			display: inline-block;
 			height: 70px;
 			overflow: hidden;
@@ -405,7 +405,7 @@ section {
 	margin-bottom: 30px;
 
 	p {
-		background: url(/assets/images/casa-do-codigo.png) right bottom no-repeat;
+		background: image-url('casa-do-codigo.png') right bottom no-repeat;
 		background-size: 100%;
 		font-size: 1.3em;
 		font-weight: normal;
@@ -600,7 +600,7 @@ footer {
 		width: 100%;
 
 		a {
-			background: url(/assets/images/logos.png) no-repeat;
+			background: image-url('logos.png') no-repeat;
 			display: inline-block;
 			height: 70px;
 			overflow: hidden;
