Update the buying link

--- a/app/views/hotsite/index.html.erb
+++ b/app/views/hotsite/index.html.erb
@@ -29,7 +29,7 @@
     </div>
 
     <div class=compreja>
-      <a class="nicebutton" href="https://casadocodigo.com.br">Comprar o livro</a>
+      <a class="nicebutton" href="https://www.casadocodigo.com.br/products/livro-desconstruindo-web">Comprar o livro</a>
     </div>
   </div>
 </header>
@@ -196,7 +196,7 @@
   </ol>
 
   <div class=compreja>
-    <a class="nicebutton" href="https://casadocodigo.com.br">Comprar o livro</a>
+    <a class="nicebutton" href="https://www.casadocodigo.com.br/products/livro-desconstruindo-web">Comprar o livro</a>
   </div>
 </section>
 <div id=tectura>
@@ -225,7 +225,7 @@
     </hgroup>
 
     <ul>
-      <li><a href="http://www.casadocodigo.com.br/">Comprar o livro</a></li>
+      <li><a href="https://www.casadocodigo.com.br/products/livro-desconstruindo-web">Comprar o livro</a></li>
       <li><a href="http://pothix.com">Site do autor</a></li>
 
       <li><a href="#conteudo">Conteúdo</a></li>
